--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=shopme
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+
+#logging security
+#logging.level.org.springframework.security=DEBUG
