--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #logging security
 #logging.level.org.springframework.security=DEBUG
+logging.level.com.shopme.admin = DEBUG
