--- a/ShopmeCommon/pom.xml
+++ b/ShopmeCommon/pom.xml
@@ -26,6 +26,12 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.12.7.1</version>
+		</dependency>
 	</dependencies>
 
 </project>
